# rusty-fibonacci-gui

./: README.md  package.json  pnpm-lock.yaml
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: Fibonacci.svelte
src/routes/: +page.svelte
