[package]
name = "rusty-fibonacci-gui"
version = "1.0.0"
description = "Calculate any number in the Fibonacci sequence"
authors = ["Eric Griffith <eric.griffith42@gmail.com>"]
license = "MIT"
repository = "https://github.com/egriff89/rusty-fibonacci-gui"
default-run = "rusty-fibonacci-gui"
edition = "2021"
rust-version = "1.73"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [] }
num-bigint = { version = "0.4.4", features = ["serde"] }
num-traits = "0.2.17"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
